<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:padding="20dp" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button00"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button00" />

        <Button
            android:id="@+id/button01"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button01" />

        <Button
            android:id="@+id/button02"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button02" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button10" />

        <Button
            android:id="@+id/button11"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button11" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button12" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button20"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button20" />

        <Button
            android:id="@+id/button21"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button21" />

        <Button
            android:id="@+id/button22"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="42sp"
            android:text="@string/button22" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/winner"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_span="3"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/start"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="3"
            android:gravity="center"
            android:text="@string/start" />
    </TableRow>


</TableLayout>
